<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/btnRecords"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="230dp"
        android:text="@string/btn_records"
        android:layout_gravity="center">
    </Button>

    <Button
        android:id="@+id/btnLog"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/btn_log_in"
        android:layout_gravity="center">
    </Button>
    <Button
        android:id="@+id/btnPlay"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/btn_play"
        android:layout_gravity="center">
    </Button>
</LinearLayout>